# outlook-mail-automation

./: LICENSE  MANIFEST.in  README.md  config.txt  get_refresh_token.py  install.py  mail_api.py  pyproject.toml  requirements.txt  setup.py
templates/: callback.html
